# taskrun

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py  taskrun  taskrun.py
plugin/: taskrun.vim
src/taskrun/: cache.py  cli.py  parser.py  task.py  variables.py
taskrun/: taskrun.py
tests/: test_cache.py  test_parser.py  test_task.py  test_variables.py
